initial documentation structure

--- a/docs/src/_static/theme_overrides.css
+++ b/docs/src/_static/theme_overrides.css
@@ -1,10 +1,6 @@
-.wy-nav-content {
-    max-width: none !important;
-}
-
 .custom-title {
     font-weight: bold;
-    color: #9bc456 !important;
+    color: #80d050 !important;
     text-align: left;
 }
 
