docs: fontawesome icons branding

--- a/docs/src/_static/color.css
+++ b/docs/src/_static/color.css
@@ -1,2 +1,65 @@
 .gv-text-main { color: #80d050; }
+
 .gv-text-comp { color: #7f2faf; }
+
+/* brand fontawesome icons (fa, fas, far, fab) */
+.fa-apple,
+.fa-arrow-pointer,
+.fa-bluesky,
+.fa-box-archive,
+.fa-circle-dot,
+.fa-circle-info,
+.fa-clapperboard,
+.fa-code,
+.fa-comments,
+.fa-computer-mouse,
+.fa-circle-down,
+.fa-circle-half-stroke,
+.fa-code-pull-request,
+.fa-download,
+.fa-envira,
+.fa-expand,
+.fa-feather-pointed,
+.fa-file-code,
+.fa-file-contract,
+.fa-file-lines,
+.fa-file-waveform,
+.fa-fire,
+.fa-flask-vial,
+.fa-github,
+.fa-graduation-cap,
+.fa-group-arrows-rotate,
+.fa-heart-circle-check,
+.fa-heart-circle-plus,
+.fa-images,
+.fa-keyboard,
+.fa-lines-leaning,
+.fa-linux,
+.fa-moon,
+.fa-mountain,
+.fa-panorama,
+.fa-pen-to-square,
+.fa-pencil,
+.fa-pump-medical,
+.fa-puzzle-piece,
+.fa-python,
+.fa-readme,
+.fa-retweet,
+.fa-road-circle-check,
+.fa-road-circle-exclamation,
+.fa-screwdriver-wrench,
+.fa-square-pen,
+.fa-seedling,
+.fa-spell-check,
+.fa-sun,
+.fa-tags,
+.fa-terminal,
+.fa-truck-fast,
+.fa-up-right-from-square,
+.fa-users-line,
+.fa-vial-circle-check,
+.fa-wand-magic-sparkles,
+.fa-water,
+.fa-wind,
+.fa-youtube,
+.fa-windows { color: #80d050 !important; }
