docs: font awesome icons coverage

--- a/docs/src/_static/color.css
+++ b/docs/src/_static/color.css
@@ -5,6 +5,7 @@
 /* brand fontawesome icons (fa, fas, far, fab) */
 .fa-apple,
 .fa-arrow-pointer,
+.fa-battery-quarter,
 .fa-bluesky,
 .fa-box-archive,
 .fa-circle-dot,
@@ -17,6 +18,7 @@
 .fa-circle-half-stroke,
 .fa-code-pull-request,
 .fa-download,
+.fa-droplet,
 .fa-envira,
 .fa-expand,
 .fa-feather-pointed,
@@ -29,20 +31,26 @@
 .fa-github,
 .fa-graduation-cap,
 .fa-group-arrows-rotate,
+.fa-heart-circle-bolt,
 .fa-heart-circle-check,
 .fa-heart-circle-plus,
+.fa-image,
 .fa-images,
+.fa-industry,
 .fa-keyboard,
 .fa-lines-leaning,
 .fa-linux,
+.fa-magnifying-glass,
 .fa-moon,
 .fa-mountain,
+.fa-mountain-sun,
 .fa-panorama,
 .fa-pen-to-square,
 .fa-pencil,
 .fa-pump-medical,
 .fa-puzzle-piece,
 .fa-python,
+.fa-quote-left,
 .fa-readme,
 .fa-retweet,
 .fa-road-circle-check,
@@ -51,12 +59,15 @@
 .fa-square-pen,
 .fa-seedling,
 .fa-spell-check,
+.fa-star-of-life,
 .fa-sun,
 .fa-tags,
 .fa-terminal,
 .fa-truck-fast,
 .fa-up-right-from-square,
 .fa-users-line,
+.fa-users-rays,
+.fa-users-viewfinder,
 .fa-vial-circle-check,
 .fa-wand-magic-sparkles,
 .fa-water,
