docs: update overview ecosystem icon

--- a/docs/src/_static/color.css
+++ b/docs/src/_static/color.css
@@ -43,7 +43,6 @@
 .fa-magnifying-glass,
 .fa-moon,
 .fa-mountain,
-.fa-mountain-sun,
 .fa-panorama,
 .fa-pen-to-square,
 .fa-pencil,
@@ -52,6 +51,7 @@
 .fa-python,
 .fa-quote-left,
 .fa-readme,
+.fa-recycle,
 .fa-retweet,
 .fa-road-circle-check,
 .fa-road-circle-exclamation,
