docs: quick start resources icon

--- a/docs/src/_static/color.css
+++ b/docs/src/_static/color.css
@@ -36,7 +36,6 @@
 .fa-heart-circle-plus,
 .fa-image,
 .fa-images,
-.fa-industry,
 .fa-keyboard,
 .fa-lines-leaning,
 .fa-linux,
@@ -63,6 +62,7 @@
 .fa-sun,
 .fa-tags,
 .fa-terminal,
+.fa-toolbox,
 .fa-truck-fast,
 .fa-up-right-from-square,
 .fa-users-line,
