docs: update fontawesome icons

--- a/docs/src/_static/color.css
+++ b/docs/src/_static/color.css
@@ -45,6 +45,7 @@
 .fa-panorama,
 .fa-pen-to-square,
 .fa-pencil,
+.fa-people-roof,
 .fa-pump-medical,
 .fa-puzzle-piece,
 .fa-python,
@@ -58,16 +59,16 @@
 .fa-square-pen,
 .fa-seedling,
 .fa-spell-check,
+.fa-square-caret-down,
+.fa-square-caret-up,
 .fa-star-of-life,
 .fa-sun,
 .fa-tags,
 .fa-terminal,
 .fa-toolbox,
 .fa-truck-fast,
+.fa-users,
 .fa-up-right-from-square,
-.fa-users-line,
-.fa-users-rays,
-.fa-users-viewfinder,
 .fa-vial-circle-check,
 .fa-wand-magic-sparkles,
 .fa-water,
