docs: add contributor codecraft

--- a/docs/src/_static/color.css
+++ b/docs/src/_static/color.css
@@ -31,6 +31,7 @@
 .fa-github,
 .fa-graduation-cap,
 .fa-group-arrows-rotate,
+.fa-hat-wizard,
 .fa-heart-circle-bolt,
 .fa-heart-circle-check,
 .fa-heart-circle-plus,
