docs: add codecraft auto-approve workflow

--- a/docs/src/_static/color.css
+++ b/docs/src/_static/color.css
@@ -57,6 +57,7 @@
 .fa-retweet,
 .fa-road-circle-check,
 .fa-road-circle-exclamation,
+.fa-robot,
 .fa-screwdriver-wrench,
 .fa-square-pen,
 .fa-seedling,
